--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "doctrine/dbal": "^3.1",
-        "illuminate/contracts": "^8.37|^9.0|^10.0",
+        "doctrine/dbal": "^4.1",
+        "illuminate/contracts": "^8.37|^9.0|^10.0|^11.0",
         "spatie/laravel-package-tools": "^1.11.0"
     },
     "require-dev": {
